--- a/src/ci/docker/x86_64-gnu-debug/Dockerfile
+++ b/src/ci/docker/x86_64-gnu-debug/Dockerfile
@@ -20,4 +20,4 @@ ENV RUST_CONFIGURE_ARGS \
       --build=x86_64-unknown-linux-gnu \
       --enable-debug \
       --enable-optimize
-ENV SCRIPT python2.7 ../x.py build
+ENV SCRIPT python2.7 /checkout/x.py build
