rustbuild: Add rls/rustfmt to toolstate.toml
This should allow temporarily disabling them

--- a/src/tools/toolstate.toml
+++ b/src/tools/toolstate.toml
@@ -22,3 +22,9 @@
 
 # ping @oli-obk @RalfJung @eddyb
 miri = "Testing"
+
+# ping @nrc @alexcrichton
+rustfmt = "Testing"
+
+# ping @nrc @alexcrichton
+rls = "Testing"
